--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ag-grid-community/locale": "^34.1.1",
     "@heroicons/react": "^2.2.0",
+    "@tanstack/react-query": "^5.85.3",
+    "ag-charts-react": "^12.1.1",
+    "ag-grid-community": "^34.1.1",
+    "ag-grid-react": "^34.1.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -30,6 +37,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^7.1.2"
   }
 }
