--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "ag-charts-react": "^12.1.1",
     "ag-grid-community": "^34.1.1",
     "ag-grid-react": "^34.1.1",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
