--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ag-grid-community/locale": "^34.1.1",
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.2.1",
     "@tanstack/react-query": "^5.85.3",
     "ag-charts-react": "^12.1.1",
     "ag-grid-community": "^34.1.1",
@@ -21,8 +22,13 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.8.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.17",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
