--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hot-toast": "^2.6.0",
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.8.0",
+    "react-select": "^5.10.2",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
