--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ag-grid-community": "^34.1.1",
     "ag-grid-react": "^34.1.1",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -29,7 +30,6 @@
     "react-router-dom": "^7.8.0",
     "react-select": "^5.10.2",
     "react-spinners": "^0.17.0",
-    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17",
