--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "expo": "^53.0.22",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
+    "react-native": "0.79.5",
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.8.0",
     "react-select": "^5.10.2",
@@ -37,8 +39,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "~19.0.10",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
@@ -47,7 +49,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^7.1.2"
   }
