--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "ag-grid-community": "^34.1.1",
     "ag-grid-react": "^34.1.1",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
     "react-phone-number-input": "^3.4.12",
